Updated content